# jeep

./: CHANGELOG.md  cabal.project  jeep.cabal
src/Jeep/: Debug.hs  Logic.hs
src/Jeep/Algebra/: Polynomial.hs  Vector.hs
src/Jeep/Algebra/Linear/: M.hs  V.hs  V2.hs  V3.hs
src/Jeep/Algebra/Linear/Dense/: M.hs  V.hs  V2.hs  V3.hs
src/Jeep/Algebra/Linear/Sparse/: M.hs  V.hs
src/Jeep/Control/: Control.hs
src/Jeep/Control/Exception/: Contract.hs
src/Jeep/Control/Monad/: Monad.hs  MonadRandom.hs
src/Jeep/Data/: Bag.hs  ByteString.hs  Foldable.hs  List.hs
src/Jeep/Data/Graph/: FGL.hs
src/Jeep/GHC/: Enum.hs
src/Jeep/Learning/: AIF.hs  Metrics.hs
src/Jeep/Logic/: AU.hs  Term.hs
src/Jeep/Numeric/: Numeric.hs
src/Jeep/Statistics/: AIF.hs  Statistics.hs
src/Jeep/Test/: QuickCheck.hs
src/Jeep/Text/: WriteCSV.hs
test/: Test.hs  TestLinearAlgebra.hs
