cabal-version:      3.0
name:               jeep
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Jerry Swan
maintainer:         dr.jerry.swan@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import: warnings
    exposed-modules:
        Jeep.Control.Monad.MonadRandom
        , Jeep.Data.Foldable
        , Jeep.Statistics.Statistics
    -- other-modules:
    -- other-extensions:
    build-depends: 
        base
        , MonadRandom
    hs-source-dirs: src
    default-language: Haskell2010

test-suite jeep-test
    import: warnings
    default-language: Haskell2010
    -- other-modules:
    -- other-extensions:
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Test.hs
    build-depends:
        base
        , jeep

-- End ---------------------------------------------------------------

