cabal-version:      3.0
name:               jeep
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
author:             Jerry Swan
maintainer:         dr.jerry.swan@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: 
        -- -Wall
        -fwarn-tabs
        -- -fwarn-name-shadowing
        -fwarn-incomplete-uni-patterns
        -fwarn-incomplete-patterns
        -fwarn-overlapping-patterns
        -fwarn-incomplete-record-updates
        -fwarn-orphans

library
    import: warnings
    exposed-modules:
        Jeep.Algebra.Linear.Dense.M
        , Jeep.Algebra.Linear.Dense.V
        , Jeep.Algebra.Linear.Dense.V2
        , Jeep.Algebra.Linear.Dense.V3        
        , Jeep.Algebra.Linear.Sparse.M
        , Jeep.Algebra.Linear.Sparse.V
        , Jeep.Control.Control        
        , Jeep.Control.Exception.Contract        
        , Jeep.Control.Monad.MonadRandom
        , Jeep.Data.Foldable
        , Jeep.Data.Graph.FGL
        , Jeep.Data.List
        , Jeep.Learning.Metrics
        , Jeep.Learning.AIF        
        , Jeep.Logic
        , Jeep.Logic.AU
        , Jeep.Logic.Term        
        , Jeep.Numeric.Numeric
        , Jeep.Statistics.Statistics
    -- other-modules:
    -- other-extensions:
    build-depends: 
        base
        , containers
        , fgl
        , MonadRandom
        , semirings
    hs-source-dirs: src
    default-language: Haskell2010

test-suite jeep-test
    import: warnings
    default-language: Haskell2010
    other-modules:
        TestLinearAlgebra
    -- other-extensions:
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Test.hs
    build-depends:
        base
        , containers
        , HUnit
        , jeep
        , QuickCheck

-- End ---------------------------------------------------------------

